<resources>
    <string name="app_name">Geo Breadcrumbs</string>

    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <string name="default_text_placeholder">placeholder</string>

    <string name="live_gps_tab_text">Live GPS</string>
    <string name="live_gps_longitude_hint">longitude</string>
    <string name="live_gps_latitude_hint">latitude</string>
    <string name="live_gps_altitude_hint">altitude</string>
    <string name="live_gps_satellites_hint">satellites</string>
    <string name="live_gps_location_fix_time_hint">Location Fix Time</string>
    <string name="live_gps_accuracy_hint">Accuracy</string>
    <string name="live_gps_speed_hint">Speed</string>
    <string name="live_gps_bearing_hint">Bearing</string>

    <string name="current_track_tab_text">Current track</string>
    <string name="current_track_dialog_new_place_title">New place</string>
    <string name="current_track_dialog_new_place_hint">Name</string>
    <string name="current_track_dialog_location_stale">Last known location is stale,\nstored place might be off !</string>
    <string name="current_track_start_track">Start track</string>
    <string name="current_track_stop_track">Stop track</string>
    <string name="current_track_add_place">Add Place</string>
    <string name="current_track_duration">Duration</string>
    <string name="current_track_distance">Distance</string>
    <string name="current_track_current_speed">Current speed</string>
    <string name="current_track_current_bearing">Current bearing</string>
    <string name="current_track_average_speed">Average speed</string>
    <string name="current_track_overall_bearing">Overall bearing</string>
    <string name="current_track_max_speed">Max speed</string>
    <string name="current_track_satellites">Satellites</string>
    <string name="current_track_number_of_places">Places</string>
    <string name="current_track_number_of_points">Points</string>

    <string name="recorded_tracks_tab_text">Tracks</string>
    <string name="recorded_tracks_view_holder_duration">Duration:</string>
    <string name="recorded_tracks_view_holder_length">Length:</string>
    <string name="recorded_tracks_view_holder_avg_speed">Avg speed:</string>
    <string name="recorded_tracks_view_holder_max_speed">Max speed:</string>
    <string name="recorded_tracks_view_holder_places">Places:</string>
    <string name="recorded_tracks_view_holder_points">Points:</string>
    <string name="recorded_tracks_view_holder_bearing">Bearing:</string>
    <string name="recorded_tracks_dialog_confirm_delete_title">Delete selected track(s)</string>
    <string name="recorded_tracks_dialog_confirm_delete_message">Confirm deletion of selected track(s)?</string>
    <string name="recorded_tracks_dialog_rename_track_title">Rename track</string>
    <string name="recorded_tracks_rename_track">Name:</string>

    <string name="main_menu_action_settings">Settings</string>
    <string name="main_menu_action_exit">Exit</string>

    <string name="settings_activity_title">Settings</string>
    <string name="settings_preference_category_units_title">Units</string>
    <string name="settings_preference_unit_measurement_title">Measurements</string>
    <string name="settings_preference_unit_measurement_key">measurements</string>
    <string name="settings_preference_unit_speed_title">Speed</string>
    <string name="settings_preference_unit_speed_key">speed</string>
    <string name="settings_preference_unit_coordinate_title">Coordinates</string>
    <string name="settings_preference_unit_coordinate_key">coordinate</string>
    <string name="settings_preference_category_tracking_precision_title">Tracking precision</string>
    <string name="settings_preference_tracking_precision_interval_title">Interval</string>
    <string name="settings_preference_tracking_precision_interval_key">interval</string>
    <string name="settings_preference_tracking_precision_distance_title">Distance</string>
    <string name="settings_preference_tracking_precision_distance_key">distance</string>
    <string name="settings_preference_category_last_known_location_title">Last known location</string>
    <string name="settings_preference_last_known_location_stale_title">Consider stale after</string>
    <string name="settings_preference_last_known_location_stale_key">stale</string>

    <string name="geo_track_service_description">GEO Breadcrumbs tracking service</string>
    <string name="geo_track_service_notification_title">GEO Breadcrumbs tracking service</string>
    <string name="geo_track_service_notification_text">Tracking in progress..</string>


    <!--    &lt;!&ndash; Preference Titles &ndash;&gt;-->
    <!--    <string name="messages_header">Messages</string>-->
    <!--    <string name="sync_header">Sync</string>-->

    <!--    &lt;!&ndash; Messages Preferences &ndash;&gt;-->
    <!--    <string name="signature_title">Your signature</string>-->
    <!--    <string name="reply_title">Default reply action</string>-->

    <!--    &lt;!&ndash; Sync Preferences &ndash;&gt;-->
    <!--    <string name="sync_title">Sync email periodically</string>-->
    <!--    <string name="attachment_title">Download incoming attachments</string>-->
    <!--    <string name="attachment_summary_on">Automatically download attachments for incoming emails-->
    <!--    </string>-->
    <!--    <string name="attachment_summary_off">Only download attachments when manually requested</string>-->

</resources>
