<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.live_gps.LiveGPSFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/coordinatesCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_container_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/longitudeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/live_gps_longitude_hint"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="false"
                    android:enabled="false"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/typography_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/latitudeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_component_margin"
                android:hint="@string/live_gps_latitude_hint"
                app:layout_constraintTop_toBottomOf="@+id/longitudeLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="false"
                    android:enabled="false"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/typography_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/altitudeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_component_margin"
                android:hint="@string/live_gps_altitude_hint"
                app:layout_constraintEnd_toStartOf="@+id/satellitesLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitudeLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_component_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="false"
                    android:enabled="false"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/typography_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/satellitesLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_component_margin"
                android:layout_marginTop="@dimen/default_component_margin"
                android:hint="@string/live_gps_satellites_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/altitudeLayout"
                app:layout_constraintTop_toBottomOf="@+id/latitudeLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="false"
                    android:enabled="false"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/typography_title" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/timeCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_container_margin"
        android:layout_marginTop="@dimen/default_component_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinatesCard"
        app:layout_constraintWidth_percent="0.45">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationFixTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/live_gps_location_fix_time_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:clickable="false"
                android:enabled="false"
                android:textIsSelectable="false"
                android:textSize="@dimen/typography_title" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/accuracyCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_component_margin"
        android:layout_marginEnd="@dimen/default_container_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinatesCard"
        app:layout_constraintWidth_percent="0.45">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accuracyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/live_gps_accuracy_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:clickable="false"
                android:enabled="false"
                android:textIsSelectable="false"
                android:textSize="@dimen/typography_title" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/speedCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_container_margin"
        android:layout_marginTop="@dimen/default_component_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeCard"
        app:layout_constraintWidth_percent="0.45">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/speedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/live_gps_speed_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:clickable="false"
                android:enabled="false"
                android:textIsSelectable="false"
                android:textSize="@dimen/typography_title" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bearingCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_component_margin"
        android:layout_marginEnd="@dimen/default_container_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accuracyCard"
        app:layout_constraintWidth_percent="0.45">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bearingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/live_gps_bearing_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:clickable="false"
                android:enabled="false"
                android:textIsSelectable="false"
                android:textSize="@dimen/typography_title" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
